--- a/style.css
+++ b/style.css
@@ -1,1 +1,3 @@
-h1{background-color: coral;}
+h1{background-color: coral;
+   color: maroon;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
