--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-h1{background-color: coral;
-   color: maroon;
+h1{background-color: rgb(163, 196, 20);
+   color: rgb(78, 2, 2);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
